# pqc-readiness-cli

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Justfile  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: cbom-validate.yml  ci.yml  codeql.yml  lint.yml  mutmut-cron.yml  release.yml
docs/: ARCHITECTURE.md  EXAMPLES.md  LIMITATIONS.md  METHODOLOGY.md
examples/: ci-integration.yml  inventory-directory.sh  inventory-local-cert.sh
src/pqc_readiness/: __init__.py  __main__.py  cli.py
src/pqc_readiness/analysis/: __init__.py  algorithms.py  findings.py  pqc_oids.py  strength.py
src/pqc_readiness/cbom/: __init__.py  builder.py  emit.py
src/pqc_readiness/scanners/: __init__.py  files.py
tests/: conftest.py  test_algorithms.py  test_cbom_builder.py  test_cli.py  test_coverage_gaps.py  test_hardening_regressions.py  test_pqc_oids.py  test_property_hypothesis.py  test_strength.py
tests/fixtures/: README.md  rsa-2048.pem
