[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "pqc-readiness-cli"
version = "0.1.0"
description = "Local cryptographic asset inventory CLI emitting CycloneDX 1.7 CBOM. From Qtonic Quantum — leading quantum risk and vulnerability intelligence tools and services."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Qtonic Quantum", email = "ciso@qtonicquantum.com" }]
keywords = ["post-quantum-cryptography", "pqc", "cyclonedx", "cbom", "fips-203", "fips-204", "fips-205", "cryptography", "security-tools"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security :: Cryptography",
]
dependencies = [
  "cryptography>=42.0",
  "cyclonedx-python-lib>=11.0",
  "pydantic>=2.0",
  "click>=8.1",
  "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.8",
  "hypothesis>=6.0",
]

[project.scripts]
pqc-readiness = "pqc_readiness.cli:main"

[project.urls]
Homepage = "https://qtonicquantum.com"
Repository = "https://github.com/qtonicquantum/pqc-readiness-cli"
"Bug Tracker" = "https://github.com/qtonicquantum/pqc-readiness-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pqc_readiness"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "N", "PT"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B008", "E501", "N"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
warn_unused_ignores = false
disallow_untyped_defs = false

[tool.pytest.ini_options]
addopts = "--cov=pqc_readiness --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]

[tool.mutmut]
paths_to_mutate = "src/pqc_readiness/"
tests_dir = "tests/"
runner = "python -m pytest -x -q"
